--- a/spring5/angular/clientes-app/src/app/clientes/clientes.component.html
+++ b/spring5/angular/clientes-app/src/app/clientes/clientes.component.html
@@ -37,7 +37,8 @@
       </tbody>
 
     </table>
-    <paginator-nav></paginator-nav>
+    <!-- El *ngIf verificar si el paginador existe -->
+    <paginator-nav *ngIf="paginador" [paginador] = "paginador"></paginator-nav>
 
 
   </div>
