--- a/spring5/angular/clientes-app/src/app/paginator/paginator.component.html
+++ b/spring5/angular/clientes-app/src/app/paginator/paginator.component.html
@@ -1,1 +1,43 @@
-<p>paginator works!</p>
+<!-- la clase pagination permite dar formato de contador de paginas
+     y es de bootstrap
+     El estilo overflow:scroll sirve para cuando existen
+     muchas paginas y se rompe el diseño.
+-->
+<!-- Sacamos overflow ya qye utilizamos algo mas elegante
+<ul *ngIf="paginas?.length>0" class="pagination" style="overflow:scroll;">
+-->
+<ul *ngIf="paginas?.length>0" class="pagination" >
+  <!-- Flecha hacia atras -->
+  <li class="page-item" *ngIf="paginador.number > 0 ">
+    <!-- &raquo; es flecha a la derecha -->
+    <a class="page-link" [routerLink]="['/clientes/page',(paginador.number - 1)]">&laquo;</a>
+  </li>
+  <!-- Ir a primera pagina -->
+  <!-- obsoleta
+  <li [ngClass]="paginador.number==0?'disabled page-item':'page-item'" >
+  -->
+  <li [ngClass]="paginador.first?'disabled page-item':'page-item'" >
+    <a class="page-link" [routerLink]="['/clientes/page',0]">Primera</a>
+  </li>
+  <!--
+  <li class="page-item" *ngFor="let pagina of paginas" [ngClass]="((pagina-1)==paginador.number)?'disabled':''">
+  la cambiamos para que en vez de aparecer dehabilitado , aparezca como la pagina activa
+  -->
+  <li class="page-item" *ngFor="let pagina of paginas" [ngClass]="((pagina-1)==paginador.number)?'active':''">
+    <span *ngIf="(pagina-1)==paginador.number" class="page-link">{{pagina}}</span>
+    <a    *ngIf="(pagina-1)!=paginador.number" class="page-link"  [routerLink]="['/clientes/page',(pagina - 1)]">{{pagina}}</a>
+  </li>
+
+  <!-- Ir a ultima pagina -->
+  <!-- opcion obsoleta
+  <li [ngClass]="paginador.number==(paginador.totalPages-1)?'disabled page-item':'page-item'" >
+  -->
+  <li [ngClass]="paginador.last?'disabled page-item':'page-item'" >
+    <a class="page-link" [routerLink]="['/clientes/page',(paginador.totalPages-1)]">Ultima</a>
+  </li>
+
+  <li class="page-item" *ngIf="paginador.number < (paginador.totalPages - 1)">
+    <!-- &raquo; es flecha a la derecha -->
+    <a class="page-link" [routerLink]="['/clientes/page',(paginador.number + 1)]">&raquo;</a>
+  </li>
+</ul>
