--- a/spring5/angular/clientes-app/src/app/clientes/clientes.component.html
+++ b/spring5/angular/clientes-app/src/app/clientes/clientes.component.html
@@ -1,3 +1,5 @@
+<!-- inyectamos un cliente asiganco como clienteSeleccionado -->
+<detalle-cliente *ngIf="clienteSeleccionado" [cliente]="clienteSeleccionado"></detalle-cliente>
 <div class="card border-primary mb-3">
   <div class="card-header">Clientes</div>
   <div class="card-body text-primary">
@@ -21,13 +23,19 @@
       </thead>
       <tbody>
         <tr *ngFor="let cliente of clientes" >
+          <!--
           <td><button type = "button" class="btn btn-success btn-sm" [routerLink]="['/clientes/upload', cliente.id]"></button> {{ cliente.id }}</td>
+          -->
+          <td><button type = "button" (click)="abrirModal(cliente)" class="btn btn-success btn-sm" ></button> {{ cliente.id }}</td>
           <td>{{ cliente.nombre }}</td>
           <td>{{ cliente.apellido | uppercase}}</td>
           <td>{{ cliente.createAt | date:"EEEE dd, MMMM yyyy"}}</td>
           <td>{{ cliente.email }}</td>
           <td>
+            <!-- Se elimina en la seccion 105 para hacerlo modal
             <button type = "button" name="editar" class="btn btn-primary" [routerLink]="['/clientes/form/', cliente.id]">editar</button>
+            -->
+            <button type = "button" (click)="abrirModal(cliente)" name="editar" class="btn btn-primary" >editar</button>
           </td>
           <td>
             <button type = "button" name="elimianr" class="btn btn-danger" (click)='delete(cliente)'>eliminar</button>
