--- a/spring5/angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/spring5/angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -1,48 +1,57 @@
-<div class="card bg-dark text-white">
-  <div class="card-header">{{titulo}}</div>
-  <div class="card-body">
+<div class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">{{titulo}}</h5>
+        <button type="button" (click)="cerrarModal()" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
+              <!-- mb-3 es un margen botton de bootstrap-->
+              <ul *ngIf="cliente" class="list-group text-dark mb-3">
+                <!-- Dejamos el nombre conopcion activo para cambiar la presentacion -->
+                <li class="list-group-item active">{{cliente.nombre}}</li>
+                <li class="list-group-item">{{cliente.apellido}}</li>
+                <li class="list-group-item">{{cliente.email}}</li>
+                <li class="list-group-item">{{cliente.createAt | date:"fullDate"}}</li>
+                <!-- Aplicamos un pipe (|) para formatear la fecha -->
+              </ul>
 
-        <!-- mb-3 es un margen botton de bootstrap-->
-        <ul *ngIf="cliente" class="list-group text-dark mb-3">
-          <!-- Dejamos el nombre conopcion activo para cambiar la presentacion -->
-          <li class="list-group-item active">{{cliente.nombre}}</li>
-          <li class="list-group-item">{{cliente.apellido}}</li>
-          <li class="list-group-item">{{cliente.email}}</li>
-          <li class="list-group-item">{{cliente.createAt | date:"fullDate"}}</li>
-          <!-- Aplicamos un pipe (|) para formatear la fecha -->
-        </ul>
+              <div class="input-group">
 
-        <div class="input-group">
+                  <input (change)="seleccionarFoto($event)" type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                  <button (click) ="subirFoto()" [disabled]="!fotoSeleccionada" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Subir Foto</button>
+                  <!-- disabled desactiva el boton si la fotoSelecionada no existe -->
 
-            <input (change)="seleccionarFoto($event)" type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-            <button (click) ="subirFoto()" [disabled]="!fotoSeleccionada" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Subir Foto</button>
-            <!-- disabled desactiva el boton si la fotoSelecionada no existe -->
+              </div>
 
-        </div>
+              <div *ngIf="progreso > 0" class="progress">
+                <!-- se cambia style por ngStyle para que avance el progreso -->
+                <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{width:progreso+ '%'}" attr.aria-valuenow="{{progreso}}" aria-valuemin="0" aria-valuemax="100">
+                  {{progreso}}%
+                </div>
+              </div>
 
-        <div *ngIf="progreso > 0" class="progress">
-          <!-- se cambia style por ngStyle para que avance el progreso -->
-          <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{width:progreso+ '%'}" attr.aria-valuenow="{{progreso}}" aria-valuemin="0" aria-valuemax="100">
-            {{progreso}}%
+
+            </div>
+            <div class="col-sm">
+              <!-- src corresponde a la ruta descrita en el BackEnd que carga la Foto
+                   en el Api RestController @GetMapping("/uploads/img/{nombreFoto:-+}") -->
+              <img *ngIf="cliente?.foto" src="http://localhost:8080/api/uploads/img/{{cliente.foto}}" alt="{{cliente.foto}}" class="img-thumbnail rounded">
+
+            </div>
+
           </div>
         </div>
 
+      </div>
+      <div class="modal-footer">
+        <button type="button" (click)="cerrarModal()" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
 
       </div>
-      <div class="col-sm">
-        <!-- src corresponde a la ruta descrita en el BackEnd que carga la Foto
-             en el Api RestController @GetMapping("/uploads/img/{nombreFoto:-+}") -->
-        <img *ngIf="cliente?.foto" src="http://localhost:8080/api/uploads/img/{{cliente.foto}}" alt="{{cliente.foto}}" class="img-thumbnail rounded">
-
-      </div>
-
     </div>
-  </div>
-
-
   </div>
 </div>
