--- a/spring5/angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/spring5/angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -19,6 +19,7 @@
                 <li class="list-group-item">{{cliente.apellido}}</li>
                 <li class="list-group-item">{{cliente.email}}</li>
                 <li class="list-group-item">{{cliente.createAt | date:"fullDate"}}</li>
+                <li class="list-group-item">{{cliente.region.nombre}}</li>
                 <!-- Aplicamos un pipe (|) para formatear la fecha -->
               </ul>
 
