--- a/spring5/angular/clientes-app/src/app/clientes/form.component.html
+++ b/spring5/angular/clientes-app/src/app/clientes/form.component.html
@@ -89,7 +89,25 @@
             <mat-datepicker #miPicker></mat-datepicker>
 
         </div>
+
       </div>
+
+      <div class="form-group row">
+        <label for="region" class="col-form-label col-sm-2">Region</label>
+        <div class="col-sm-6">
+
+            <select [compareWith]="compararRegion" class="form-control" [(ngModel)]="cliente.region" name="region" style="width:300px">
+              <option [ngValue]="undefined">--- seleccione una región ---</option>
+              <option *ngFor="let region of regiones" [ngValue]="region">{{region.nombre}}</option>
+            </select>
+
+
+
+        </div>
+
+      </div>
+
+
 
       <div class="form-group row">
         <div class="col-sm-6">
