--- a/spring5/angular/clientes-app/src/app/clientes/clientes.component.html
+++ b/spring5/angular/clientes-app/src/app/clientes/clientes.component.html
@@ -52,7 +52,7 @@
             -->
           </td>
           <td>
-            <button type = "button" name="elimianr" class="btn btn-danger" (click)='delete(cliente)'>eliminar</button>
+            <button type = "button" name="eliminar" class="btn btn-danger" (click)='delete(cliente)'>eliminar</button>
           </td>
 
         </tr>
