--- a/spring5/angular/clientes-app/src/app/header/header.component.html
+++ b/spring5/angular/clientes-app/src/app/header/header.component.html
@@ -1,22 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">{{company}}</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <a class="navbar-brand" href="#">{{company}}</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      <!--
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      -->
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Home
+            <span class="sr-only">(current)</span>
+          </a>
         </li>
+        <!--
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" aria-current="page" routerLink ='/directivas'>Directivas</a>
         </li>
+        -->
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" aria-current="page" routerLink='/clientes'>Clientes</a>
+          <a class="nav-link" [routerLink]="['/clientes']">Clientes</a>
         </li>
 
-
+        <!--
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
@@ -34,11 +42,44 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
+        -->
+
       </ul>
+
+      <!--
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      -->
+
+      <ul class="navbar-nav navbar-right">
+
+        <!--
+        <li *ngIf="!authService.isAuthenticated()">
+        -->
+        <li *ngIf="!authService.isAuthenticated()">
+          <a [routerLink]="['/login']" class="btn btn-outline-primary">Log In</a>
+        </li>
+
+        <li *ngIf="authService.isAuthenticated()" class="dropdown">
+          <a class="btn btn-outline-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{authService.usuario.username}}
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <button (click)="logout()" class="dropdown-item" type="submit">Log Out</button>
+          </div>
+
+        </li>
+
+        <!--
+        <li *ngIf="authService.isAuthenticated()">
+          <a  class="btn btn-outline-primary">Log Out</a>
+        </li>
+        -->
+      </ul>
+
     </div>
-  </div>
+
 </nav>
